mediapipe/examples/desktop/hand_tracking_c_api.h

// C API for the pipeline liberated redux of the hand tracking pipeline, to be used in other languages (e.g. rust).

#ifndef NO_PIPELINE_C_API_H_
#define NO_PIPELINE_C_API_H_

#include "mediapipe/liberated/liberated_core.h"
#include "mediapipe/framework/deps/safe_int.h"
#include "hand_tracking_c_types.h"
#include <stddef.h>
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

/// Opaque handle for the C++ HandsPipelineOperator instance,
/// being returned by the create function and taken as input
/// by the other below API functions
typedef void* HandTrackingCoreOpaqueHandle;

/// C api creation of an instance of the underlying C++ class
HandTrackingCoreOpaqueHandle hand_tracking_core_create(uint max_hands_to_track, const char* models_path);

/// C api for obtaining hand tracking results for an image being given to it.
/// Destroying the result object passed by reference is the responsibility of the caller.
int hand_tracking_core_process(
    HandTrackingCoreOpaqueHandle opaque_handle,
    // the image as a pointer to its numpy array bytes, plus the shape and strides of this array,
    // which is the only way to pass an image from C code. the function implementation re-wraps
    // this bytes data back into a cv2::Mat object.
    const uint8_t* data, size_t width, size_t height, size_t row_stride,
    HandTrackingResultC** hand_tracking_result); // output argument

/// function implementations for the above signatures return non-zero and set a "last_error"
/// string value if they fail. This function should be used by the caller, to retrieve that
/// last message for the caller, in case the caller gets a non-zero return value
/// from any of the above API-exposed functions of this C API.
const char* hand_tracking_get_last_error();

/// finalize the instance of the underlying C++ class
int hand_tracking_core_finalize(HandTrackingCoreOpaqueHandle opaque_handle);

/// returns a version string for this API, or more broadly, this API and moreso the underlying C++ implementation driven by it,
/// which is implied because this api is consumed in other repositories (via a lib) generated by the current code repository
/// and hence version compatibility becomes a thing.
const char* hand_tracking_core_version();

/// Destroys a HandTrackingResultC and all its nested allocations.
/// In the future, we may switch to preallocate a fixed amount of memory and reuse the same memory on all calls
/// to the Process method, at which point the caller will no longer need to manage the lifecycle (destruction)
/// of the returned struct after each call. (the function implementation for this function declaration is in
/// the .cc file defining the output HandTrackingResultC just for cohesion with that type.
void hand_tracking_result_destroy(HandTrackingResultC* result);

#ifdef __cplusplus
}
#endif

#endif  // NO_PIPELINE_C_API_H_